--- a/src/components/ProfileWidget/ProfileWidget.module.scss
+++ b/src/components/ProfileWidget/ProfileWidget.module.scss
@@ -64,34 +64,3 @@
   -webkit-mask: url(../../assets/icons/context.svg) no-repeat center;
   mask: url(../../assets/icons/context.svg) no-repeat center;
 }
-
-@media only screen and (max-width: 1300px) {
-  .userProfile {
-    display: grid;
-    width: 40px;
-    height: 40px;
-    grid-template-columns: 40px;
-    grid-column-gap: 0px;
-    margin: 0;
-    padding-inline: 2px;
-
-    .background {
-      width: 40px;
-      height: 40px;
-    }
-  }
-
-  .userInfo {
-    display: none;
-  }
-
-  .contextMenu {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 720px) {
-  .userProfile {
-    display: none;
-  }
-}
